--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,10 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "attached_assets"
+  ]
 }
